[package]
name = "NFT-contract-interaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
dotenv = "0.15.0"
fuels = { version = "0.55.0", features = ["fuel-core-lib"] }
tokio = "1.37.0"
